# ImageGenAI-Workshop

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0001_initial.sql
backend/app/: challenge.py  config.py  db.py  llm.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/core/: config.py
backend/app/routers/: admin.py  auth.py  challenge.py  scoreboard.py
backend/app/scoring/: flag_validator.py  scoring_engine.py
backend/app/services/: imagegen.py
challenges/: _schema.md  level-00.yaml  level-01.yaml  level-02.yaml  level-03.yaml  level-04.yaml  level-05.yaml  level-06.yaml  level-07.yaml  level-08.yaml
docs/: 01-workshop-design.md  02-ctf-design.md  03-architecture.md  04-implementation-plan.md  05-tech-stack.md  06-build-artifacts.md  07-execution-roadmap.md  cost-estimate.md  github-project-board.md  instructor-guide.md  owasp-mapping.md  student-guide.md
frontend/: Dockerfile  package.json
infra/: docker-compose.yml
infra/caddy/: Caddyfile
infra/observability/: loki-config.yml  prometheus.yml
infra/runpod/: handler.py
scripts/: smoke_test.sh
