[project]
name = "imagegenai-workshop-backend"
version = "0.1.0"
description = "Deliberately vulnerable AI image-generation CTF platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",   # JWT
    "pyyaml>=6.0",                       # challenge configs
    "pillow>=10.3",                      # mock images + metadata read/write
    "piexif>=1.1",                       # EXIF for Level 4
    "runpod>=1.6",                       # serverless client (runpod mode only)
    "websockets>=12.0",                  # live scoreboard
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
